fixing contact page on small screen

--- a/frontend/src/Pages/Contact/contact.scss
+++ b/frontend/src/Pages/Contact/contact.scss
@@ -287,7 +287,7 @@ width: fit-content;
     }
   }
 }
-@media screen and (max-width:283px) and (min-width: 270px) {
+@media screen and (max-width:283px) and (min-width: 221px) {
   .contact {
     padding: 0;
     margin: 5% 0;
